metrics/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphite-deployment
  labels:
    app: graphite
spec:
  selector:
    matchLabels:
      app: graphite
  template:
    metadata:
      labels:
        app: graphite
    spec:
      containers:
        - name: graphite
          image: graphiteapp/graphite-statsd
          ports:
            - conteinerPort: 80
            - conteinerPort: 2003
            - conteinerPort: 2004
            - conteinerPort: 2023
            - conteinerPort: 2024
            - conteinerPort: 8125
            - conteinerPort: 8126
