metrics/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: metrics
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - host: metrics.kube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
